Fix spacing errors

--- a/css/main.css
+++ b/css/main.css
@@ -71,10 +71,10 @@ h3 {
 cite {
   font-style: italic;
   font-size: .875rem;
+  flex-grow: 2;
 }
 
 p {
-  display: inline-block;
   margin: 0 0 1.5rem;
   flex-grow: 1;
 }
